--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "angular": "angularjs#^1.5.5",
     "angular-popeye": "^1.0.5",
-    "ngSmoothScroll": "^2.0.0"
+    "ngSmoothScroll": "^2.0.0",
+    "angular-pageslide-directive": "^1.1.1"
   }
 }
