--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "angular": "angularjs#^1.5.5",
     "angular-popeye": "^1.0.5",
     "ngSmoothScroll": "^2.0.0",
-    "angular-pageslide-directive": "^1.1.1"
+    "angular-pageslide-directive": "^1.1.1",
+    "angular-animate": "^1.5.5"
   }
 }
