--- a/source/composer.json
+++ b/source/composer.json
@@ -17,7 +17,10 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files": [
+            "app/RobinKessingerFestival/helpers.php"
+        ]
     },
     "autoload-dev": {
         "classmap": [
